--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>e-Wallet</title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>e-Wallet</title>
+</head>
+
+<body>
+  <header>
+    <section>
+      <section>
+        <img src="img/logo.png" alt="">
+      </section>
+      <section>
+
+      </section>
+    </section>
+  </header>
+</body>
+
 </html>
