--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -9,11 +9,11 @@
 <body>
   <header>
     <section>
-      <section>
+      <section id="stlogo">
         <img src="img/logo.png" alt="">
       </section>
-      <section>
-
+      <section id="stheader">
+      <h1>e-Wallet</h1>
       </section>
     </section>
   </header>
