Ya esta el Header

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -2,21 +2,22 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>e-Wallet</title>
-</head>
+    <meta charset="utf-8">
+    <title>e-Wallet</title>
+    <link rel="stylesheet" href="css/estilo.css"> </head>
 
 <body>
-  <header>
-    <section>
-      <section id="stlogo">
-        <img src="img/logo.png" alt="">
-      </section>
-      <section id="stheader">
-      <h1>e-Wallet</h1>
-      </section>
-    </section>
-  </header>
+    <header>
+        <section id="header">
+            <section id="stlogo"> <img src="img/logo.png" width="100%"> </section>
+        </section>
+        <ul>
+            <li><a href="default.asp">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+        </ul>
+    </header>
 </body>
 
 </html>
