--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -11,13 +11,53 @@
         <section id="header">
             <section id="stlogo"> <img src="img/logo.png" width="100%"> </section>
         </section>
-        <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
-        </ul>
+        <section id="header2"></section>
     </header>
+    <section id="formularios">
+        <section id="registro">
+            <br>
+            <h2>Registro</h2>
+            <form id="frmregistro">
+                <input type="text" id="nombres" placeholder="Nombres" autocomplete="off">
+                <input type="text" id="apellidos" placeholder="Apellidos" autocomplete="off">
+                <br>
+                <input type="email" id="email" placeholder="e-Mail" autocomplete="off">
+                <input type="password" id="pass" placeholder="Contraseña" autocomplete="off">
+                <br>
+                <input type="password" id="pass2" placeholder="Repetir contraseña" autocomplete="off">
+                <br>
+                <select id="departamento">
+                    <option value="default">Departamento</option>
+                </select>
+                <select name="" id="municipio">
+                    <option value="default">Municipio</option>
+                </select>
+                <br>
+                <input type="text" id="direccion" placeholder="Dirección" autocomplete="off">
+                <br>
+                <select name="" id="pregunta">
+                    <option value="1">¿Cuál es el nombre de tu madre?</option>
+                    <option value="2">¿Cuál fue el nombre de tu primera mascota?</option>
+                    <option value="3">¿Cuál fue el nombre de tu mejor amigo de la infancia?</option>
+                    <option value="4">¿Cuál es tu comida favorita?</option>
+                    <option value="5">¿Cuál es tu deporte favorito?</option>
+                </select>
+                <input type="text" id="respuesta" placeholder="Respuesta" autocomplete="off">
+                <br>
+                <input type="text" id="dui" placeholder="Dui">
+                <input type="text" id="nit" placeholder="NIT">
+                <br>
+                <input type="text" placeholder="Número celular">
+                <br>
+                <select name="mes" id="mes">
+                    <option value="default">Mes de nacimiento</option>
+                </select>
+                <select name="annio" id="annio">
+                    <option value="default">Día de nacimiento</option>
+                </select>
+                <input type="text" placeholder="Año de nacimiento"> </section>
+        </form>
+    </section>
 </body>
 
 </html>
