--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -55,7 +55,9 @@
                 <select name="annio" id="annio">
                     <option value="default">Día de nacimiento</option>
                 </select>
-                <input type="text" placeholder="Año de nacimiento"> </section>
+                <input type="text" placeholder="Año de nacimiento">
+                <br>
+                <input type="button" value="Enviar datos"> </section>
         </form>
     </section>
 </body>
