Funcionamiento de Menu responsive - CSS - JS
agregalo a la master

--- a/proyecto/vista/verDatos.html
+++ b/proyecto/vista/verDatos.html
@@ -9,36 +9,39 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu-contenedor ">
-        <a href="" class="btnMenu">Menú</a>
-        <ul class="menu-bloque">
+    <div class="bar-menu" id="btnMenu">
+            <a  class="btnMenu">Menú</a>
+    </div>
+    <div class="menu-contenedor" id="sideBar">
+        
+        <ul class="menu-bloque" id="blqMen">
             
-            <li><a href="#">Cuentas</a>
+            <li class=""><a href="#">Cuentas</a>
                 <ul>
                     <li><a href="" >Efectivo</a></li>
                     <li><a href="">Cuentas</a></li>
                     <li><a href="">Tarjetas de Credito</a></li>
                 </ul>      
             </li>
-            <li><a href="#">Ingresos</a>
+            <li class=""><a href="#">Ingresos</a>
                 <ul>
                     <li><a href="">Ver Ingresos</a></li>
                     <li><a href="">Agregar Ingresos</a></li>
                 </ul>
             </li>
-            <li><a href="#">Gastos</a>
+            <li class=""><a href="#">Gastos</a>
                 <ul>
                     <li><a href="">Ver Gastos</a></li>
                     <li><a href="">Agregar Gasto</a></li>
                 </ul>
             </li>
-            <li><a href="#">Configuraciones generale</a>
+            <li class=""><a href="#">Configuraciones generale</a>
                 <ul>
                     <li><a href="">Tipo de pago / Defecto</a></li>
                     <li><a href="">Balance Alerta</a></li>
                 </ul>
             </li>
-            <li><a href="#">Estadísticas</a>
+            <li class=""><a href="#">Estadísticas</a>
                 <ul>
                     <li><a href="">a</a></li>
                     <li><a href="">b</a></li>
@@ -46,6 +49,9 @@
                 </ul>
             </li>
         </ul>
+    </div>
+    <div class="html-cont">
+        <h1>Hola</h1>
     </div>
 </body>
 <script src="../../archivos_generales/Funciones-JS/animacionJS.js"></script>
