Haciendo el inicio

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -15,17 +15,29 @@
    
             
     <div class="bar-Men">
-        <a class="btnMenuBar">eWallet</i>
-        </a>  
-        <div class="horizontal-menu">
+        <div class="mostrar"><a class="btnMenuBar">eWallet 
+            </a></div>  
+        <div class="botonBar">
+            <a ><i class="fa fa-bars" aria-hidden="true"></i></a>
+        </div>
+        <div class="horizontal-menu mostrar">
             <ul>
                 <li><a href="">Iniciar Sesión</a></li>
                 <li><a href="">Registrarse</a></li>
             </ul>
         </div>
     </div> 
-   
-   
+    <div class="menuLateral">
+        <ul class="bloque">
+            <li><a href="">Iniciar Sesión</a></li>
+            <li><a href="">Registrarse</a></li>
+        </ul>
+    </div>
+   <div class="row tabla">
+       <div class="col-9">
+        <h1>Hola</h1>
+       </div>
+   </div>
     
 </body>
 </html>
