--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -17,8 +17,9 @@
         <section id="registro">
             <br>
             <h2>Registro</h2>
-            <form id="frmregistro">
-                <input type="text" id="nombres" placeholder="Nombres" autocomplete="off">
+            <form id="frmregistro" class="cont">
+                <label class="" id="lbl1">Nombre: </label>
+                <input type="text" id="txt" class="txt" autocomplete="off">
                 <input type="text" id="apellidos" placeholder="Apellidos" autocomplete="off">
                 <br>
                 <input type="email" id="email" placeholder="e-Mail" autocomplete="off">
@@ -61,5 +62,6 @@
         </form>
     </section>
 </body>
+<script src="js/estilo.js"></script>
 
 </html>
