--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,14 +20,18 @@
             <br>
             <h2>Registro</h2>
             <form id="frmregistro" class="cont">
-                <label class="lbl" id="lbl1">Nombre: </label>
-                <input type="text" id="txt" class="txt" autocomplete="off">
-                <input type="text" id="apellidos" placeholder="Apellidos" autocomplete="off">
+                <label class="lbl" id="lbl1">Nombres: </label>
+                <input type="text" id="nombres" class="txt" autocomplete="off">
+                <label class="lbl" id="lbl2">Apellidos: </label>
+                <input type="text" id="apellidos" class="txt" autocomplete="off">
                 <br>
-                <input type="email" id="email" placeholder="e-Mail" autocomplete="off">
-                <input type="password" id="pass" placeholder="Contraseña" autocomplete="off">
+                <label class="lbl" id="lbl3">e-Mail: </label>
+                <input type="email" id="email" class="txt" autocomplete="off">
+                <label class="lbl" id="lbl4">Contraseña: </label>
+                <input type="password" id="pass" class="txt" autocomplete="off">
                 <br>
-                <input type="password" id="pass2" placeholder="Repetir contraseña" autocomplete="off">
+                <label class="lbl" id="lbl4">Repetir contraseña: </label>
+                <input type="password" id="pass2" class="txt" autocomplete="off">
                 <br>
                 <select id="departamento">
                     <option value="default">Departamento</option>
