--- a/proyecto/vista/verDatos.html
+++ b/proyecto/vista/verDatos.html
@@ -22,11 +22,11 @@
                         <h2>Cliente</h2>
                     </div>
                     <ul>
-                        <li><a href="">Cuentas</a></li>
-                        <li><a href="">Ingresos</a></li>
-                        <li><a href="">Gastos</a></li>
-                        <li><a href="">Configuraciones Generales</a></li>
-                        <li><a href="">Estadísticas</a></li>
+                        <li><a>Cuentas</a></li>
+                        <li><a>Ingresos</a></li>
+                        <li><a>Gastos</a></li>
+                        <li><a>Configuraciones Generales</a></li>
+                        <li><a>Estadísticas</a></li>
                     </ul>
                 </div>
             
