--- a/proyecto/vista/verDatos.html
+++ b/proyecto/vista/verDatos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../archivos_generales/css/estilo.css">
     <title>Document</title>
     <script src="https://use.fontawesome.com/3b5d49183e.js"></script>
+    <script src="../../archivos_generales/Funciones-JS/Teemo.js"></script>
 </head>
 
 <body>
