--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <title>e-Wallet</title>
     <link rel="stylesheet" href="css/estilo.css"> </head>
-<script type="text/javascript" src="js/validacion.js">
+<script type="text/javascript" src="js/formulario.js">
+
+
 </script>
 
 <body>
@@ -35,6 +37,20 @@
                 <br>
                 <select id="departamento">
                     <option value="default">Departamento</option>
+                    <option value="ahuachapan">Ahuachapán</option>
+                    <option value="cabanas">Cabañas</option>
+                    <option value="chalatenango">Chalatenango</option>
+                    <option value="cuscatlan">Cuscatlán</option>
+                    <option value="llibertad">La Libertad</option>
+                    <option value="lpaz">La paz</option>
+                    <option value="lunion">La Unión</option>
+                    <option value="morazan">Morazan</option>
+                    <option value="smiguel">San Miguel</option>
+                    <option value="ssalvador">San Salvador</option>
+                    <option value="svicente">San vicente</option>
+                    <option value="sana">Santa Ana</option>
+                    <option value="sonsonate">Sonsonate</option>
+                    <option value="usulutan">Usulutan</option>
                 </select>
                 <select name="" id="municipio">
                     <option value="default">Municipio</option>
