--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -47,7 +47,7 @@
                     <option value="morazan">Morazan</option>
                     <option value="smiguel">San Miguel</option>
                     <option value="ssalvador">San Salvador</option>
-                    <option value="svicente">San vicente</option>
+                    <option value="svicente">San Vicente</option>
                     <option value="sana">Santa Ana</option>
                     <option value="sonsonate">Sonsonate</option>
                     <option value="usulutan">Usulutan</option>
