--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8">
     <title>e-Wallet</title>
     <link rel="stylesheet" href="css/estilo.css"> </head>
-<script type="text/javascript" src="js/formulario.js">
-
-
-</script>
-
+    <script type="text/javascript" src="js/formulario.js"></script>
 <body>
     <header>
         <section id="header">
@@ -93,5 +89,6 @@
     </section>
 </body>
 <script src="js/estilo.js"></script>
+
 
 </html>
