--- a/proyecto/html/registro.html
+++ b/proyecto/html/registro.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>e-Wallet</title>
-    <link rel="stylesheet" href="css/estilo.css"> </head>
-    <script type="text/javascript" src="js/formulario.js"></script>
+    <link rel="stylesheet" href="../css/estilo.css"> </head>
+    <script type="text/javascript" src="../js/formulario.js"></script>
 <body>
     <header>
         <section id="header">
-            <section id="stlogo"> <img src="img/logo.png" width="100%"> </section>
+            <section id="stlogo"> <img src="../img/logo.png" width="100%"> </section>
         </section>
         <section id="header2"></section>
     </header>
@@ -88,7 +88,7 @@
         </form>
     </section>
 </body>
-<script src="js/estilo.js"></script>
+<script src="../js/estilo.js"></script>
 
 
 </html>
