--- a/proyecto/html/registro.html
+++ b/proyecto/html/registro.html
@@ -78,8 +78,21 @@
                 <br><br><br>
                 <select name="mes" id="mes">
                     <option value="default">Mes de nacimiento</option>
+                    <option value="enero">Enero</option>
+                    <option value="febrero">Febrero</option>
+                    <option value="marzo">Marzo</option>
+                    <option value="abril">Abril</option>
+                    <option value="mayo">Mayo</option>
+                    <option value="junio">Junio</option>
+                    <option value="julio">Julio</option>
+                    <option value="agosto">Agosto</option>
+                    <option value="septiembre">Septiembre</option>
+                    <option value="octubre">Octubre</option>
+                    <option value="noviembre">Noviembre</option>
+                    <option value="diciembre">Diciembre</option>
+                    
                 </select>
-                <select name="annio" id="annio">
+                <select name="dia" id="dia">
                     <option value="default">Día de nacimiento</option>
                 </select>
                 <br>
