--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
+    <link rel="stylesheet" href="css/estiloRegistro.css">
     <link rel="stylesheet" href="../archivos_generales/css/estilo.css">
+    <script src="../archivos_generales/Funciones-JS/Teemo.js"></script><script src="../archivos_generales/Funciones-JS/Teemo.js"></script>
     <title>Document</title>
-    <script src="https://use.fontawesome.com/3b5d49183e.js"></script>
-
+    <!-- <script src="https://use.fontawesome.com/3b5d49183e.js"></script> -->
+    
 </head>
 <body>
     <div class="bar-Men">
@@ -20,7 +22,7 @@
         <div class="horizontal-menu mostrar">
             <ul>
                 <li><a href="">Iniciar Sesión</a></li>
-                <li><a href="html/registro.html">Registrarse</a></li>
+                <li><a href="#" id="btnReg">Registrarse</a></li>
             </ul>
         </div>
     </div> 
@@ -77,4 +79,8 @@
    </div>
     
 </body>
+
+
+<script src="js/estilo.js"></script>
+<script src="js/registrar.js"></script>
 </html>
