--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
     <link rel="stylesheet" href="css/estiloRegistro.css">
     <link rel="stylesheet" href="../archivos_generales/css/estilo.css">
-    <script src="../archivos_generales/Funciones-JS/Teemo.js"></script><script src="../archivos_generales/Funciones-JS/Teemo.js"></script>
+    <script src="../archivos_generales/Funciones-JS/Teemo.js"></script>
     <title>Document</title>
     <!-- <script src="https://use.fontawesome.com/3b5d49183e.js"></script> -->
     
@@ -21,7 +21,7 @@
         </div>
         <div class="horizontal-menu mostrar">
             <ul>
-                <li><a href="">Iniciar Sesión</a></li>
+                <li><a href="#" id="btnLog">Iniciar Sesión</a></li>
                 <li><a href="#" id="btnReg">Registrarse</a></li>
             </ul>
         </div>
@@ -80,7 +80,8 @@
     
 </body>
 
-
+<script src="../archivos_generales/Funciones-JS/animacionJS.js"></script>
 <script src="js/estilo.js"></script>
 <script src="js/registrar.js"></script>
+
 </html>
