--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -65,7 +65,7 @@
    
 
 </body>
-
+<script src="js/formulario.js"></script>
 <script src="../archivos_generales/Funciones-JS/animacionJS.js"></script>
 <script src="js/estilo.js"></script>
 <script src="js/Vistas.js"></script>
