Login y Registro Funcionando

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -65,6 +65,7 @@
    
 
 </body>
+<script src="js/login.js"></script>
 <script src="js/formulario.js"></script>
 <script src="../archivos_generales/Funciones-JS/animacionJS.js"></script>
 <script src="js/estilo.js"></script>
