--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -22,16 +22,16 @@
             <ul>
                 <li><a href="#" id="btnLog">Iniciar Sesión</a></li>
                 <li><a href="#" id="btnReg">Registrarse</a></li>
-                
+
             </ul>
         </div>
     </div>
 
 
-        <div id="indexInfo">
-            
+    <div id="indexInfo">
 
-    <section id="contenedor">
+
+        <section id="contenedor">
             <div class="p1">
 
                 <h2>A solo un click!</h2><br><br>
@@ -42,10 +42,10 @@
                 </p>
             </div>
         </section>
-        </div>
+    </div>
 
 
-
+    <div id="cont_footer">
         <div class="footer">
             <h4>eWallet</h4>
             <ul>
@@ -56,13 +56,14 @@
             </ul>
             <span>eWallet R&L ©</span>
         </div>
-        </div>
+    </div>
+    </div>
 
 
 
 
-        </div>
-   
+    </div>
+
 
 </body>
 <script src="js/login.js"></script>
