--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-
+<!-- 
     <div id="indexInfo">
 
 
@@ -42,10 +42,49 @@
                 </p>
             </div>
         </section>
-    </div>
+    </div> -->
 
+        <div class='bar-menu' id='btnMenu'>
+                <a  class='btnMenu'>Menú <i class='fa fa-bars fa-2x btn-bar'></i></a>
+            </div>
+            <div class='cont-Father'>
+                    <div class='barra-lateral'>
+                            <div class='cabera-menu'>
+                                <img src='img/logo.png' class='logo'>
+                            </div>
+                            <ul>
+                                <li id='liOp'><a>Cuentas</a>
+                                    <ul id='liD' class='des'>
+                                        <li><a href='#'>Efectivo</a></li>
+                                        <li><a href='#'>Cuentas</a></li>
+                                        <li><a href='#'>Tarjetas de Crédito</a></li>
+                                    </ul>
+                                </li>
+                               <li><a>Ingresos</a></li>
+                               <li><a>Gastos</a></li>
+                                <li><a>Configuraciones Generales</a></li>
+                                <li><a>Estadísticas</a></li>
+                            </ul>
+                        </div>
+                        <div class='contenido ' id='contenido'>
+                           <div class='info'>
+                                    
+                           </div>
+                       <div class='footer'>
+                           <h4>eWallet</h4>
+                            <ul>
+                                <li><a href='#'>Enlace</a></li>
+                                <li><a href='#'>Enlace</a></li>
+                                <li><a href='#'>Enlace</a></li>
+                                <li><a href='#'>Enlace</a></li>
+                            </ul>
+                            <span>eWallet R&L ©</span>
+                        </div>
+                    </div>
+                </div> 
 
-    <div id="cont_footer">
+    <br><br><br><br><br><br><br><br><br><br> <br><br> 
+    <!-- <div id="cont_footer">
         <div class="footer">
             <h4>eWallet</h4>
             <ul>
@@ -62,7 +101,7 @@
 
 
 
-    </div>
+    </div> -->
 
 
 </body>
