--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -62,7 +62,17 @@
    
     </div>
 
-
+ <div id="cont_footer">
+htmlIndex +='   <div class="footer">
+htmlIndex +='   <h4>eWallet</h4>
+htmlIndex +='   <ul>
+htmlIndex +='       <li><a href="#">Enlace</a></li>
+htmlIndex +='       <li><a href="#">Enlace</a></li>
+htmlIndex +='       <li><a href="#">Enlace</a></li>
+htmlIndex +='       <li><a href="#">Enlace</a></li>
+htmlIndex +='   </ul>
+htmlIndex +='   <span>eWallet R&L ©</span>
+htmlIndex +='   </div></div>
 
 
     </div>
