--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -59,20 +59,20 @@
 
        
 
-   
+    <div id="cont_footer">
+          <div class="footer">
+          <h4>eWallet</h4>
+          <ul>
+              <li><a href="#">Enlace</a></li>
+              <li><a href="#">Enlace</a></li>
+              <li><a href="#">Enlace</a></li>
+              <li><a href="#">Enlace</a></li>
+          </ul>
+          <span>eWallet R&L ©</span>
+          </div></div>
     </div>
 
- <div id="cont_footer">
-htmlIndex +='   <div class="footer">
-htmlIndex +='   <h4>eWallet</h4>
-htmlIndex +='   <ul>
-htmlIndex +='       <li><a href="#">Enlace</a></li>
-htmlIndex +='       <li><a href="#">Enlace</a></li>
-htmlIndex +='       <li><a href="#">Enlace</a></li>
-htmlIndex +='       <li><a href="#">Enlace</a></li>
-htmlIndex +='   </ul>
-htmlIndex +='   <span>eWallet R&L ©</span>
-htmlIndex +='   </div></div>
+
 
 
     </div>
